--- a/Project.ipynb
+++ b/Project.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "**PCOS PREDICTION USING MACHINE LEARNING MODEL**\n",
     "\n",
+    "**INTRODUCTION**\n",
+    "\n",
     "Polycystic Ovary Syndrome (PCOS) is a common hormonal disorder affecting women of reproductive age, leading to irregular menstrual cycles, infertility, and metabolic complications. This project aims to analyze a PCOS dataset using machine learning techniques to identify key factors associated with the condition and build predictive models for early diagnosis.\n",
     "\n",
     "In these project, the dataset contains medical and lifestyle-related attributes collected from women, including Demographic Details such as Age, BMI, and ethnicity, Menstrual and Hormonal Features such as Menstrual regularity, hirsutism, and acne severity, Metabolic Indicators such as Insulin resistance, stress levels, and PCOS family history, Diagnosis Label such as Indicates whether a person has PCOS (Yes/No). Among these the target variable is Diagnosis,which indicates whether the patient has been diagnosed with PCOS or not.\n",
@@ -1410,14 +1412,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3c34da3b-15e9-4bbe-9100-6e6f7074f256",
-   "metadata": {},
-   "source": [
-    "**CONCLUSION**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 223,
    "id": "d78ee299-b341-40d0-a37e-1eaf95b37618",
@@ -1513,8 +1507,45 @@
    "id": "81762f84-22e2-45db-95ba-f7a2aad5a245",
    "metadata": {},
    "source": [
-    "Based on the accuracy comparison of different models, **the Random Forest model achieved the highest accuracy of 82.85%, making it the most reliable choice for predicting PCOS in this dataset.** The Decision Tree model also performed well with 75.81% accuracy, while KNN, Logistic Regression, and Support Vector Machine (SVM) showed comparatively lower accuracies. This suggests that ensemble methods like Random Forest are better suited for this classification task, likely due to their ability to handle complex patterns and reduce overfitting."
+    "**the Random Forest model achieved the highest accuracy of 82.85%, making it the most reliable choice and best model for predicting PCOS in this dataset.** "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96e052db-7fbc-43ae-abda-2f19db356d22",
+   "metadata": {},
+   "source": [
+    "**CONCLUSION**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0ba5c6b-fe9f-4fc5-8155-d4cb91bfa3db",
+   "metadata": {},
+   "source": [
+    "This project aimed to predict Polycystic Ovary Syndrome (PCOS) using machine learning models based on various health parameters. Through data analysis and model evaluation, several key insights were obtained:\n",
+    "\n",
+    "**1.PCOS Awareness vs. Diagnosis:** While many individuals are aware of PCOS, there is still a gap between awareness and actual diagnosis. This highlights the need for better education and early screening.\n",
+    "\n",
+    "**2.Impact of BMI on PCOS:** The analysis showed a significant correlation between BMI categories and PCOS diagnosis. Individuals with obesity or overweight conditions had a higher prevalence, emphasizing the role of weight management in PCOS risk.\n",
+    "\n",
+    "**3.Model Performance Comparison:** Various machine learning models were tested, and Random Forest emerged as the best-performing model with an accuracy of 82.8%, followed by Decision Tree (75.8%) and KNN (65.5%). Logistic Regression and Support Vector Machines had lower accuracy, indicating their limitations in capturing complex patterns in the dataset.\n",
+    "\n",
+    "**4.Importance of Machine Learning in Healthcare:** The study demonstrated how machine learning can assist in early detection and risk assessment of PCOS. These predictive models can help healthcare professionals in decision-making and proactive intervention.\n",
+    "\n",
+    "**5.Handling Class Imbalance:** Since medical datasets often have an imbalance (fewer PCOS cases than non-PCOS), SMOTE (Synthetic Minority Over-sampling Technique) was applied to improve model performance, ensuring that minority class instances were well-represented.\n",
+    "\n",
+    "\n",
+    "This project provided valuable insights into PCOS prediction using machine learning. The findings suggest that BMI, awareness, and early screening play a crucial role in managing PCOS risks. Based on the accuracy comparison of different models, the Random Forest model achieved the highest accuracy of 82.85%, making it the most suitable model for PCOS classification . The Decision Tree model also performed well with 75.81% accuracy, while KNN, Logistic Regression, and Support Vector Machine (SVM) showed comparatively lower accuracies. This suggests that ensemble methods like Random Forest are better suited for this classification task, likely due to their ability to handle complex patterns and reduce overfitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fee9b95f-c7b1-4599-a341-ae7889621785",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
